# HELIX

./: .gitignore  CMakeLists.txt  Readme.md
arm_baremetal_app/: cmd_parser.c  cmd_parser.h  gpio_driver.c  gpio_driver.h  main.c  rfdc_driver.c  rfdc_driver.h  rx_driver.c  rx_driver.h  sdfs_driver.c  sdfs_driver.h  tools.h  tx_dma_driver.c  tx_dma_driver.h  tx_driver.c  tx_driver.h  udp_dma_driver.c  udp_dma_driver.h  udp_driver.c  udp_driver.h  xrfclk.c  xrfclk.h  xrfclk_LMK_conf.h  xrfclk_LMX_conf.h
examples/: addr_table.csv  block_names.conf  helpers.cpp  helpers.h  hw_accel.cpp  loopback_example.cpp  loopback_test.cpp  main.cpp  measure_latency_rx.cpp  measure_latency_tx.cpp  microbenchmark_exp.cpp  radio_example.cpp  sensing_app.cpp  sinewave_example.cpp  test_csv.cpp  test_csv.h  throughput_experiment_rx.cpp  throughput_experiment_tx.cpp
fpga/: HELIX.tcl
fpga/IP_REPO/5G_TESTBED/AXI_MUX_5G_IP/: component.xml
fpga/IP_REPO/5G_TESTBED/CE_5G_NR_v2/: component.xml
fpga/IP_REPO/5G_TESTBED/CFO_CORRECTION_5G_IP/: component.xml
fpga/IP_REPO/5G_TESTBED/DEMAPPER_5G_IP/: component.xml
fpga/IP_REPO/5G_TESTBED/FILTER_DS_x8_v3_1.0/: component.xml
fpga/IP_REPO/5G_TESTBED/LDPC_DECODER_V2_5G_IP/: component.xml
fpga/IP_REPO/5G_TESTBED/LDPC_DECODER_V2_INST2_5G_IP/: component.xml
fpga/IP_REPO/5G_TESTBED/MMSE_EQ_5G_IP/: component.xml
fpga/IP_REPO/5G_TESTBED/MMSE_EQ_V2_5G_IP/: component.xml
fpga/IP_REPO/5G_TESTBED/OFDM_DEMOD_V3_5G_IP/: component.xml
fpga/IP_REPO/5G_TESTBED/OFDM_MOD_5G_IP/: OFDM_MOD_0_4.xcix  OFDM_MOD_0_5.xcix  OFDM_MOD_0_6.xcix  component.xml
fpga/IP_REPO/5G_TESTBED/PT_RS_5G_IP/: component.xml
fpga/IP_REPO/5G_TESTBED/SSB_LBM/: component.xml
fpga/IP_REPO/FIR_decimator_div4/: component.xml
fpga/IP_REPO/IP_demapper_M_QAM_5G_IP/: component.xml
fpga/IP_REPO/automatic_gain_control/: component.xml
fpga/IP_REPO/delay_buffer_1_0/: component.xml
fpga/IP_REPO/eth_10g_1.0/: component.xml
fpga/IP_REPO/packetizer_RT/: component.xml
fpga/IP_REPO/rx_controlled_buffer_1_0/: component.xml
fpga/IP_REPO/stream_manager_1_0/: component.xml
fpga/IP_REPO/tx_buffer/: component.xml
fpga/IP_REPO/udp_stack_1_0/: component.xml
fpga/src/: design_1_wrapper.vhd  mts.xdc  spi_mux.xdc  udp.xdc
include/: cmd_manager.h  defines.h  helix.h  ldpc_configuration.h  mimorph.h  radio_control.h  streamer.h  udp_transport.h
lib/: cmd_manager.cpp  dpdk.cpp  helix.cpp  ldpc_configuration.cpp  mimorph.cpp  radio_control.cpp  streamer.cpp  udp_transport.cpp
matlab/TX_data/QPSK/: slotFR2_CH1_7.3_TX1.txt
matlab/decoding_functions/: CONFIG_5G_DECODER.m  Dmrs_Ptrs_Ssb_symbs.mat  SSB_DECODING_FCN.m  split6_decoding.m  split7_2x_decoding.m  split7_3_decoding.m  split8_decoding.m  split_7_2_decoding.m
matlab/decoding_functions/SSB_DECODING/: HBF_64.mat  PSS_CORRELATION_FCN.m  PSS_PRE_FILTER.mat  PSS_filter_coeff.mat  SSB_MODEL.m
(+963 files in other folders)
